--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,18 @@
 $menuBg:#304156;
 $subMenuBg:#1f2d3d;
 $menuHover:#001528;
+
+
+//不伤眼睛配色
+$menuBg:#ccffcc;
+$subMenuBg:#c7edcc;
+$menuHover:#cfcbae;
+$menuLineColor:#c7edcc;
+
+$mainBg:#DCE2F1;
+
+$tagsWrapperBg:#DCE2F1;
+$tagsWrapperBbBg:#DCE2F1;
+$tableBg:#FAF9DE;
+$inputBg:#ebebe4;
+$loadingMaskBg: rgba(235, 235, 228, 0.7);
