--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,3 +17,5 @@ $tagsWrapperBbBg:#DCE2F1;
 $tableBg:#FAF9DE;
 $inputBg:#ebebe4;
 $loadingMaskBg: rgba(235, 235, 228, 0.7);
+$collapseBg: #ebebe4;
+$collapseHeaderBg:#DCE2F1;
