1、调整列表中分页控件的属性； 2、对订单查询对时间框进行优化，可以快速选择一个账期

--- a/src/styles/editForm.scss
+++ b/src/styles/editForm.scss
@@ -33,12 +33,17 @@
     width: 220px;
     margin: 2px 2px;
   }
-
+  .search-panel .el-date-editor--datetimerange{
+    width:310px;    margin: 2px 2px;
+  }
   .search-panel .el-button {
     margin-left: 10px;
   }
 
   .search-panel .el-select {
     margin: 2px 2px;
+  }
+  .search-panel .search-con-container{
+    display: inline;
   }
 }
