--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,17 +5,23 @@ $menuHover:#001528;
 
 
 //不伤眼睛配色
-$menuBg:#ccffcc;
-$subMenuBg:#c7edcc;
-$menuHover:#cfcbae;
-$menuLineColor:#c7edcc;
+//$menuBg:#ccffcc;
+//$subMenuBg:#c7edcc;
+//$menuHover:#cfcbae;
+//$menuLineColor:#c7edcc;
 
-$mainBg:#DCE2F1;
+$menuBg:#FAF9DE;
+$subMenuBg:#FAF9DE;
+$menuHover: #f8faab;
+$menuLineColor:#FAF9DE;
 
-$tagsWrapperBg:#DCE2F1;
-$tagsWrapperBbBg:#DCE2F1;
+$mainBg:#FAF9DE;
+
+$tagsWrapperBg:#FAF9DE;
+$tagsWrapperBbBg:#FAF9DE;
 $tableBg:#FAF9DE;
 $inputBg:#ebebe4;
 $loadingMaskBg: rgba(235, 235, 228, 0.7);
 $collapseBg: #ebebe4;
 $collapseHeaderBg:#DCE2F1;
+$ul-border-right-color: rgba(216, 219, 225, 0.58);
