1。修改了弹窗背景颜色。

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,6 +22,6 @@ $tagsWrapperBbBg:#FAF9DE;
 $tableBg:#FAF9DE;
 $inputBg:#ebebe4;
 $loadingMaskBg: rgba(235, 235, 228, 0.7);
-$collapseBg: #ebebe4;
+$collapseBg: #FAF9DE;
 $collapseHeaderBg:#DCE2F1;
 $ul-border-right-color: rgba(216, 219, 225, 0.58);
