1. 新增重复支付订单查询。

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -88,7 +88,11 @@ a:hover {
 }
 
 .app-container {
-  padding: 20px;
+  //padding: 20px;
+  //padding-top:32px;
+}
+.cc-router-container{
+  padding-top:32px;
 }
 // 全局table状态
 .el-table .warning-row ,.cc-order-table .warning-row{
