--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -16,7 +16,7 @@
     height: 100%;
     position: fixed;
     font-size: 0px;
-    top: 0;
+    top: 50px;
     bottom: 0;
     left: 0;
     z-index: 1001;
