--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // sidebar
-$menuBg:#304156;
-$subMenuBg:#1f2d3d;
-$menuHover:#001528;
+//$menuBg:#304156;
+//$subMenuBg:#1f2d3d;
+//$menuHover:#001528;
 
 
 //不伤眼睛配色
@@ -10,18 +10,36 @@ $menuHover:#001528;
 //$menuHover:#cfcbae;
 //$menuLineColor:#c7edcc;
 
-$menuBg:#FAF9DE;
-$subMenuBg:#FAF9DE;
+//$menuBg:#FAF9DE;
+//$subMenuBg:#FAF9DE;
+//$menuHover: #f8faab;
+//$menuLineColor:#FAF9DE;
+//
+//$mainBg:#FAF9DE;
+//
+//$tagsWrapperBg:#FAF9DE;
+//$tagsWrapperBbBg:#FAF9DE;
+//$tableBg:#FAF9DE;
+//$inputBg:#ebebe4;
+//$loadingMaskBg: rgba(235, 235, 228, 0.7);
+//$collapseBg: #FAF9DE;
+//$collapseHeaderBg:#DCE2F1;
+//$ul-border-right-color: rgba(216, 219, 225, 0.58);
+
+$menuBg:#f5f5f5;
+$subMenuBg:#f5f5f5;
 $menuHover: #f8faab;
 $menuLineColor:#FAF9DE;
 
-$mainBg:#FAF9DE;
+$mainBg:#f5f5f5;
 
-$tagsWrapperBg:#FAF9DE;
-$tagsWrapperBbBg:#FAF9DE;
-$tableBg:#FAF9DE;
+$tagsWrapperBg:#f5f5f5;
+$tagsWrapperBbBg:#f5f5f5;
+$tableBg:#ffffff;
 $inputBg:#ebebe4;
 $loadingMaskBg: rgba(235, 235, 228, 0.7);
-$collapseBg: #FAF9DE;
+$collapseBg: #ffffff;
 $collapseHeaderBg:#DCE2F1;
 $ul-border-right-color: rgba(216, 219, 225, 0.58);
+$navbar-bg-color:#fa7b11;
+
