1. 新增重复支付订单查询。

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -115,6 +115,9 @@ a:hover {
 .cc-inline-title-table tr td:nth-child(2n+1){
   font-size:15px;
 }
-
+.cc-form{
+  width:80%;
+  padding:30px;
+}
 //不伤眼的色彩  苹果绿 RGB 204,255,204 #CCFFCC  杏仁黄 rgb 250 249 222 #FAF9DE 海天蓝 rgb 220 226 241  #DCE2F1  青草绿 rgb 227 237 205 #E3EDCD
 // 豆沙绿 #c7edcc 灰色 #ebebe4
