--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -36,7 +36,7 @@ $mainBg:#f5f5f5;
 $tagsWrapperBg:#f5f5f5;
 $tagsWrapperBbBg:#f5f5f5;
 $tableBg:#ffffff;
-$inputBg:#ebebe4;
+$inputBg: #ffffff;
 $loadingMaskBg: rgba(235, 235, 228, 0.7);
 $collapseBg: #ffffff;
 $collapseHeaderBg:#DCE2F1;
