--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -105,6 +105,7 @@ a:hover {
   width:100%;
   border-left:1px solid #ccc;
   border-top:1px solid #ccc;
+  border-spacing:0px;
 }
 .cc-order-table .order-amount{
   color: #ff741b; font-size:16px; font-weight: bold;
