1. 修改了多次点击同一记录编辑按钮，导致后面无法显示内容的bug。 2. 新增了编辑保存过程中的loading。

--- a/src/styles/edit-form.scss
+++ b/src/styles/edit-form.scss
@@ -46,4 +46,9 @@
   .search-panel .search-con-container{
     display: inline;
   }
+  //为了在弹窗中显示全部的加载内容。
+  .cc-dialog-edit-form{
+    margin:-30px -20px;
+    padding: 30px 20px;
+  }
 }
