--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -26,7 +26,7 @@
       transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
     }
     .scrollbar-wrapper {
-      height: calc(100% + 15px);
+      height: calc(100% - 50px);
       .el-scrollbar__view {
         height: 100%;
       }
