1、隐藏广电系统部分菜单。

--- a/src/styles/edit-form.scss
+++ b/src/styles/edit-form.scss
@@ -23,7 +23,9 @@
     width: 150px;
     margin: 2px 2px;
   }
-
+  .el-select > .el-input{
+    width:100%;
+  }
   .search-panel .el-date-editor {
     width: 180px;
     margin: 2px 2px;
